[package]
name = "vol3d"
version = "1.0.0"
description = "Vol3D desktop application"
authors = ["Vol3D"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]




